import React from 'react';
import {renderToFragmentWithTheme} from '../../test/test-utils';
import {
  CardComposable,
  CardMedia,
  CardContent,
  CardActions,
  CardLink,
} from '..';

describe('CardComposable', () => {
  test('renders defaults', () => {
    const fragment = renderToFragmentWithTheme(CardComposable, {
      children: [
        <CardContent>content</CardContent>,
        <CardMedia media={{src: 'image/url.png', alt: 'image'}} />,
        <CardActions>actions</CardActions>,
      ],
    });
    expect(fragment).toMatchSnapshot();
  });
});
